--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
     "body-parser": "^1.20.1",
+    "dayjs": "^1.11.7",
     "express": "^4.18.2",
     "rxjs": "~7.5.0",
     "ts-node": "^10.9.1",
